2A/05_Projet_GL/src/test/deca/context/invalid/complet/05_duplication_decl_field.deca
// Description :
//     duplication de declParam 
// Resultats :
//    ligne 10 : a est deja declarée
// Historique :
//  cree le 16/01/2024

class A {
    int a ;
    boolean a ;
}